Assistant checkpoint: Built complete fuel management app with authentication, ticket workflow, and CTO approval system
Assistant generated file changes:
- app.json: Update app configuration for fuel management app
- lib/supabase.ts: Create Supabase client configuration
- contexts/AuthContext.tsx: Create authentication context
- app/_layout.tsx: Update root layout with authentication
- app/index.tsx: Create main app entry point
- app/welcome.tsx: Create welcome screen with animations
- app/auth/login.tsx: Create login screen
- app/auth/signup.tsx: Create signup screen with role selection
- app/(tabs)/_layout.tsx: Update tab layout for fuel management app
- app/(tabs)/index.tsx: Create dashboard screen
- app/create-ticket.tsx: Create ticket creation screen
- app/(tabs)/approvals.tsx: Create CTO approval screen
- app/waiting-approval.tsx: Create waiting approval screen for fuelers
- app/(tabs)/tickets.tsx: Create tickets screen for fuelers
- database-schema.sql: Create Supabase database schema
- .replit: Updated app configuration

---

User prompt:

User Roles
Fueler: Can sign up, log in, initiate tickets (uplift/dispersion), and provide fuel input.

CTO: Approves or rejects tickets from the dashboard.

Authentication
Email-based sign-up and login.

Two sign-up flows: one for Fueler, one for CTO approval (Fueler signs up, CTO approves account).

App Pages / Screens
Welcome Screen: Attractive UI with smooth animation.

Login Screen: Email/password login.

Signup Screen: Two flows: Fueler registration, CTO approval.

Initiate Ticket (Fueler):

Fueler enters Site ID.

App auto-populates fields from fuel history (fetched from Supabase).

If fuel consumption < 85% (from last fueling date to today), ticket is NOT initiated but still goes to CTO for review. Otherwise, ticket is initiated and goes for approval.

Uplift and Dispersion options.

Approval Screen (CTO):

CTO sees pending tickets.

Can approve or reject each ticket.

Fueler Input Form (Uplift/Dispersion):

After ap

--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
+
 {
   "expo": {
-    "name": "expo-on-replit",
-    "slug": "expo-on-replit",
+    "name": "Fuel Management App",
+    "slug": "fuel-management-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "fuelapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
