--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
@@ -13,5 +14,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "../app/(tabs)/coordinator.tsx"  ]
 }
